--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,14 @@ uuid = "90f29749-8bb1-4c4e-9fa5-9d1f13c958bf"
 authors = ["Christian Laforte and contributors"]
 version = "0.1.0"
 
+[deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+CUDAKernels = "72cfdca4-0801-4ab0-bf6a-d52aa10adc57"
+ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
+Preferences = "21216c6a-2e73-6563-6e65-726566657250"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
 [compat]
 julia = "1.7"
 
